--- a/src/components/PizzaCard.css
+++ b/src/components/PizzaCard.css
@@ -1,7 +1,6 @@
 body{
-    background: linear-gradient(135deg,  rgba(226,226,226,1) 0%,rgba(219,219,219,1) 50%,rgba(209,209,209,1) 50%,rgba(209,209,209,1) 50%,rgba(254,254,254,1) 100%) 
-    center/cover no-repeat;
-    min-height:100vh}
+    background: linear-gradient(135deg,  rgb(182, 125, 34),rgb(176, 96, 4) 50%,rgb(120, 74, 0) 50%,rgb(231, 129, 4) 50%,rgb(198, 109, 7) 100%) 
+}
 .card{
     width:360px;
     background:#fff;
