--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,7 +2,7 @@ header {
     background-image: url("logo/fundo.jpeg");
     padding: 1rem 0;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    position: fixed; 
+    position:absolute;
     top: 0; /*Isso aq q gruda no topo*/
     width: 100%;
     height: 130px;
@@ -23,7 +23,7 @@ header {
 
 
 .logo{
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     filter: drop-shadow(0 0 2em #646cffaa);
