--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,7 +5,7 @@ header {
     position:absolute;
     top: 0; /*Isso aq q gruda no topo*/
     width: 100%;
-    height: 130px;
+    height: 140px;
     z-index: 1000;
 }
 .background-image{
@@ -20,13 +20,11 @@ header {
     position: relative;
 }
 
-
-
 .logo{
     position: absolute;
     top: 0;
-    left: 0;
-    filter: drop-shadow(0 0 2em #646cffaa);
+    left: 120px;
+    filter: drop-shadow(0 0 2em #3e63c1aa);
     z-index: 1000;
     height: 150px;
 }
@@ -37,7 +35,7 @@ header {
     z-index: 1000;
     font-size: 4rem;
     padding-left: 8rem;
-    padding-top: 0.2rem;
+    padding-top: 1.5rem;
     font-weight: bold;
     text-transform: uppercase;
     color: #fff;
@@ -49,13 +47,47 @@ header {
 }
 
 
-/* Keyframes for melting effect */
-@keyframes melt {
-    0%, 100% {
-        transform: translateY(0);
-    }
-    50% {
-        transform: translateY(20px);
-    }
+
+
+.button-29 {
+  position: relative;
+  appearance: none;
+  background-image: radial-gradient(100% 100% at 100% 0, #d78469 0, #8a350d 100%);
+  border: 0;
+  border-radius: 6px;
+  box-shadow: rgba(45, 35, 66, .4) 0 2px 4px,rgba(45, 35, 66, .3) 0 7px 13px -3px,rgba(58, 65, 111, .5) 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: "JetBrains Mono",monospace;
+  height: 48px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow .15s,transform .15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow,transform;
+  font-size: 18px;
+}
+
+.button-29:focus {
+  box-shadow: #d75f03 0 0 0 1.5px inset, rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #d64b0a 0 -3px 0 inset;
+}
+
+.button-29:hover {
+  box-shadow: rgba(45, 35, 66, .4) 0 4px 8px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #ce6107 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+
+.button-29:active {
+  box-shadow: #db410e 0 3px 7px inset;
+  transform: translateY(2px);
 }
 
