--- a/src/components/PizzaOrder.css
+++ b/src/components/PizzaOrder.css
@@ -1,16 +1,25 @@
 .order img{
-    padding-top: 40px;
+    top: 0;
+    padding-top: 70px;
+    left: 0;
+    position: fixed;
     width: 600px; 
     height: 600px;
     border-radius: 50%;
     object-fit: cover; 
 }
 
-/* colocar a pizza pro lado esquerdo da tela*/
-/*colocar  as informações pro lado direto da tela*/
-/*queria fazer tipo uma box que tenha as informações da pizza*/
-/*e fazer o coisinha de escolher tamanho mais bonitinho*/
+textarea {
+  color: rgb(255, 255, 255); 
+  background-color: rgb(243, 216, 216);
+}
+
+input[type="radio"] {
+      accent-color: blue; 
+}
+
 .order-box{
+    padding-left: 500px;
     align-items:center ;
     justify-content: center;
 }
