--- a/src/components/PizzaOrder.css
+++ b/src/components/PizzaOrder.css
@@ -57,7 +57,7 @@ textarea::placeholder {
 
 .tamanho{
   text-align: center;
-  font-size: 20px;
+  font-size: 25px;
 
 }
 body{
@@ -98,7 +98,7 @@ input[type="radio"]:checked::after {
 .quantidade{
   text-align: center;
   padding: 20px;
-  font-size: 20px;
+  font-size: 25px;
 
 }
 
@@ -118,7 +118,30 @@ input[type="radio"]:checked::after {
   transition: background-color 0.2s ease;
 }
 
+.tamanho-selecione{
+    border: 2px solid #4f2b09;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: rgb(218, 182, 160);
+    padding: 8px;
+    text-align: center;
+    background: linear-gradient(90deg, #472504, #9a4309, #c74b08);
+    background-color: #4f2b09;
+    -webkit-text-stroke: 0.8px rgb(66, 26, 14);
+    border-radius: 5px; /*caso nao quiser redondo tira isso aq*/
+}
 
+.tamanho-pizzas{
+  color:rgb(123, 56, 8);
+  border: 2px solid #291c0f;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: rgb(233, 176, 140);
+    padding: 10px;
+    text-align: center;
+    background: linear-gradient(90deg, #663402, #b84e07, #e45609);
+    background-color: #684422;
+    -webkit-text-stroke: 1px rgb(66, 26, 14);
+    border-radius: 30px; /*caso nao quiser redondo tira isso aq*/
+}
 .quantidade{
   display: flex;
   align-items: center;
@@ -152,7 +175,6 @@ input[type="radio"]:checked::after {
   min-height: 300px;
   background-color: #FFFD75;
   box-shadow: 5px 5px 10px -2px rgba(33, 33, 33, .3);
-  transform: rotate(2deg) skew(-1deg, 1deg);
   transition: transform 0.15s;
   margin: 0;
 }
