table or home at carrinho and more css

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -32,6 +32,7 @@ header {
 
 .melting-text {
     top: 0;
+    -webkit-text-stroke: 1.3px rgb(0, 0, 0);
     z-index: 1000;
     font-size: 4rem;
     padding-left: 8rem;
