--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -12,6 +12,7 @@ header {
     height: auto;
     width: 140px;
 }
+
 .header-container {
     margin: 0 auto;
     display: flex;
@@ -40,8 +41,8 @@ header {
     font-weight: bold;
     text-transform: uppercase;
     color: #fff;
+    background-color: #efac41;
     animation: melt 3s infinite ease-in-out;
-    background: linear-gradient(90deg, #ff6f61, #ffbd44, #ff6f61);
     -webkit-background-clip: text;
     color: transparent;
     margin: 0;
@@ -53,7 +54,7 @@ header {
 .button-29 {
   position: relative;
   appearance: none;
-  background-image: radial-gradient(100% 100% at 100% 0, #d78469 0, #8a350d 100%);
+  background-image: orange;
   border: 0;
   border-radius: 6px;
   box-shadow: rgba(45, 35, 66, .4) 0 2px 4px,rgba(45, 35, 66, .3) 0 7px 13px -3px,rgba(58, 65, 111, .5) 0 -3px 0 inset;
