--- a/src/components/PizzaOrder.css
+++ b/src/components/PizzaOrder.css
@@ -5,7 +5,7 @@
     width: 600px; 
     height: 600px;
     border-radius: 50%;
-    object-fit: cover; 
+    
 }
 
 
@@ -14,7 +14,7 @@ textarea {
 }
 
 textarea::placeholder {
-  color: lightgray
+  color: rgb(244, 238, 238)
 }
 
 
@@ -34,10 +34,9 @@ textarea::placeholder {
     padding-top: 1.5rem;
     font-weight: Impact;
     text-transform: uppercase;
-    background: linear-gradient(90deg, #970e97, #b1770a, #1e0ca4);
-    -webkit-background-clip: text;
-    color: transparent;
-    -webkit-text-stroke: 1px black;
+    color: #ffca0c;
+    /*Fazer um degrade dps*/
+    -webkit-text-stroke: 3px #330a04;
     margin: 0;
 }
 
@@ -60,10 +59,8 @@ textarea::placeholder {
   font-size: 25px;
 
 }
-body{
-  accent-color: red;
-    background: linear-gradient(135deg,  rgb(182, 125, 34),rgb(176, 96, 4) 50%,rgb(120, 74, 0) 50%,rgb(231, 129, 4) 50%,rgb(198, 109, 7) 100%) 
-}
+
+
 
 input[type="radio"] {
     appearance: none;
@@ -103,42 +100,42 @@ input[type="radio"]:checked::after {
 }
 
 .quantidade span{
-  font-size: 20px;
+  font-size: 30px;
+  color:#000;
 }
 
 
 .quantidade-controle button {
   padding: 0.5rem 1rem;
   border: 1px solid #ddd;
-  background-color: aliceblue;
+  background-color: rgb(250, 253, 255);
   color: black;  
-  font-size: 16px;
+  font-size: 12px;
   border-radius: 50px;
   cursor: pointer;
   transition: background-color 0.2s ease;
 }
 
 .tamanho-selecione{
-    border: 2px solid #4f2b09;
+    border: 2px solid #330a04;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: rgb(218, 182, 160);
+    color: rgb(253, 251, 250);
     padding: 8px;
     text-align: center;
-    background: linear-gradient(90deg, #472504, #9a4309, #c74b08);
-    background-color: #4f2b09;
+   
+    background-color: #b32900;
     -webkit-text-stroke: 0.8px rgb(66, 26, 14);
     border-radius: 5px; /*caso nao quiser redondo tira isso aq*/
 }
 
 .tamanho-pizzas{
-  color:rgb(123, 56, 8);
-  border: 2px solid #291c0f;
+    border: 2px solid #291c0f;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: rgb(233, 176, 140);
+    color: rgb(251, 248, 246);
     padding: 10px;
     text-align: center;
-    background: linear-gradient(90deg, #663402, #b84e07, #e45609);
-    background-color: #684422;
+   
+    background-color: #b32900;
     -webkit-text-stroke: 1px rgb(66, 26, 14);
     border-radius: 30px; /*caso nao quiser redondo tira isso aq*/
 }
@@ -170,7 +167,7 @@ input[type="radio"]:checked::after {
 .note {
   display: block;
   position: relative;
-  padding: 1em;
+  padding: 2em;
   width: 300px;
   min-height: 300px;
   background-color: #FFFD75;
@@ -213,3 +210,10 @@ input[type="radio"]:checked::after {
 .note textarea.cnt {
   min-height: 200px;
 }
+
+.note button{
+  padding: 100px;
+  
+}
+
+
