--- a/src/pages/Cardapio.css
+++ b/src/pages/Cardapio.css
@@ -1,27 +1,46 @@
+/*.color1 { #efac41 };
+.color2 { #de8531 };
+.color3 { #b32900 };
+.color4 { #6c1305 };
+.color5 { #330a04 };*/
+
+/*marrom 673917*/
+
+
 .produto-h1{
     border: 2px solid #4f2b09;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: rgb(244, 210, 190);
+    color: rgb(245, 234, 227);
     padding: 10px;
     text-align: center;
-    background: linear-gradient(90deg, #472504, #9a4309, #c74b08);
-    background-color: #4f2b09;
+    background-color: #cc3e18;
     -webkit-text-stroke: 2px rgb(66, 26, 14);
     border-radius: 5px; /*caso nao quiser redondo tira isso aq*/
 }
 
 .produto-h2{
-  color:rgb(123, 56, 8);
-  border: 2px solid #291c0f;
+    border: 2px solid #291c0f;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: rgb(233, 215, 203);
+    color: rgb(248, 230, 220);
     padding: 10px;
     text-align: center;
-    background: linear-gradient(90deg, #663402, #b84e07, #e45609);
-    background-color: #684422;
+    background-color: #f0971c;
     -webkit-text-stroke: 1px rgb(66, 26, 14);
     border-radius: 30px; /*caso nao quiser redondo tira isso aq*/
 }
+
+.tamanhos-tamanho{
+    border: 2px solid #291c0f;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: rgb(248, 230, 220);
+    padding: 20px;
+    text-align: center;
+    background-color: #efac41;
+    -webkit-text-stroke: 1px rgb(66, 26, 14);
+    border-radius: 30px; /*caso nao quiser redondo tira isso aq*/
+    letter-spacing: 1px; 
+}
+
 
 
 .cardapio {
@@ -75,7 +94,7 @@ body{
 }
 
 body {
-  background-color: #3a2406;
+
   justify-content: center; 
   min-height: 100vh;       
   margin: 0;
