--- a/src/pages/Carrinho.css
+++ b/src/pages/Carrinho.css
@@ -7,27 +7,29 @@
     text-align: center;
     font-weight: Impact;
     text-transform: uppercase;
-    background: linear-gradient(90deg, #550a33, #d49725, #5ca4ec);
+    background-color: #efac41;
     -webkit-background-clip: text;
     color: transparent;
     -webkit-text-stroke: 1px black;
     margin: 0 auto;
 }
 
-.carinha-triste{
-  color:rgb(123, 56, 8);
-  border: 3px solid #291c0f;
+.carrinho-total{
+    -webkit-text-stroke: 1px black
+}
+
+.carinha-vazio-header{
+    color:rgb(123, 56, 8);
+    border: 3px solid #291c0f;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: rgb(249, 230, 218);
     padding: 10px;
     text-align: center;
-    background: linear-gradient(90deg, #390a5a, #995020, #ade5ac);
-    background-color: #684422;
+
+    background-color: #dca91e;
     -webkit-text-stroke: 2px rgb(66, 26, 14);
     border-radius: 30px; /*caso nao quiser redondo tira isso aq*/
 }
-
-
 
 .olhada-produtos{
 
@@ -47,22 +49,21 @@
     color: rgb(233, 176, 140);
     padding: 10px;
     text-align: center;
-    background: linear-gradient(90deg, #663402, #b84e07, #e45609);
-    background-color: #684422;
+    background-color: #b95c10;
     -webkit-text-stroke: 1px rgb(66, 26, 14);
     border-radius: 30px;
 }
 
 .carrinho-nome{
     color:rgb(221, 188, 165);
-    border: 2px solid #291c0f;
+    border: 3px solid #330a04 ;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: rgb(233, 176, 140);
+    color: rgb(249, 229, 219);
     padding: 10px;
     text-align: center;
-    background: linear-gradient(90deg, #58310b, #b84e07, #e45609);
-    background-color: #684422;
-    -webkit-text-stroke: 1px rgb(66, 26, 14);
+
+    background-color: #b32900;
+    -webkit-text-stroke: 2px #330a04 ;
     border-radius: 30px; /*caso nao quiser redondo tira isso aq*/
 }
 
@@ -71,12 +72,12 @@
   align-items: center;
   gap: 10px; /* espaçamento entre imagem, infos e botão */
   padding: 20px 30px;
-  border: 3px solid #ddd;
+  border: 3px solid #330a04 ;
   margin-bottom: 20px; /*altera a distância entre os itens*/
   border-radius: 30px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 
-  background-color: #a9863f;
+  background-color: #6c1305   ;
 }
 
 .carrinho-item img {
@@ -88,19 +89,20 @@
 
 .carrinho-item-info {
   margin-left: 80px;
-  padding: 30px 30px;
+  padding: 30px 20px;
   flex-grow: 1; /* ocupa o espaço restante */
   
 }
 
 .carrinho-item-info h2 {
   margin: 0 0 5px 0;
-  font-size: 1.8rem;
+  font-size: 2rem;
+  color: #efac41
 }
 
 .carrinho-item-info h3 {
   margin: 2px 0;
-  color: #fffce8;
+  color: #fffef6;
   font-size: 20px;
   
 }
@@ -115,7 +117,6 @@
   margin: auto; /* empurra o botão para a direita */
   width: 20px; /* remove largura fixa se quiser */
   padding: 10px 20px;
-  background: #3c257dd5;
   border: 2px solid #a31b1b;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   border-style: none none solid none;
@@ -129,16 +130,15 @@
   text-align: center;
 }
 .comanda h2{
-    border: 2px solid #291c0f;
+    border: 3px solid #330a04 ;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: rgb(243, 223, 211);
+    color: rgb(252, 241, 234);
     padding: 10px;
     font-size: 30px;
     text-align: center;
-    background: linear-gradient(90deg, #58310b, #b84e07, #e45609);
-    background-color: #684422;
+    background-color: #b32900;
     -webkit-text-stroke: 1px rgb(66, 26, 14);
-    border-radius: 30px;
+    border-radius: 25px;
 }
 
 .comanda form{
@@ -253,3 +253,49 @@ select {
 }
 
 
+.bg{
+  animation:slide 3s ease-in-out infinite alternate;
+  background-image: linear-gradient(-60deg,  #efac41  50%, #e54312 50%);
+  bottom:0;
+  left:-50%;
+  opacity:.5;
+  position:fixed;
+  right:-50%;
+  top:0;
+  z-index:-1;
+}
+
+.bg2 {
+  animation-direction:alternate-reverse;
+  animation-duration:4s;
+}
+
+.bg3 {
+  animation-duration:5s;
+}
+
+.content {
+  background-color:rgba(255,255,255,.8);
+  border-radius:.25em;
+  box-shadow:0 0 .25em rgba(0,0,0,.25);
+  box-sizing:border-box;
+  left:50%;
+  padding:10vmin;
+  position:fixed;
+  text-align:center;
+  top:50%;
+  transform:translate(-50%, -50%);
+}
+
+h1 {
+  font-family:monospace;
+}
+
+@keyframes slide {
+  0% {
+    transform:translateX(-25%);
+  }
+  100% {
+    transform:translateX(25%);
+  }
+}
