ingredients filter added to cardapio
a posicao desses botao ta tudo errado, dps eu conserto affr

--- a/src/pages/Cardapio.css
+++ b/src/pages/Cardapio.css
@@ -41,27 +41,20 @@
     letter-spacing: 1px; 
 }
 
-
+.background-cardapio{
+  background-image: url("images/madeira.jpg");
+  bottom:0;
+  left:-50%;
+  right:-50%;
+  top:0;
+  z-index:-1;
+}
 
 .cardapio {
-  flex-grow: 1;
-  background-image: url("images/madeira.jpg");
-  background-size: cover;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat:repeat;
-  position: relative;
-  padding-top: 140px;
+  padding-top: 100px; /*Aq aumenta a distancia entre header e cardapio*/
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
 }
 
-body{
-  margin:0;
-}
 
 .tamanhos {
   display: flex;
@@ -108,3 +101,30 @@ body {
   justify-items: center; 
 }
 
+.filtro{
+  position: relative;
+  padding-top: 100px;
+}
+
+.filtro-botao{
+   background-color:  #b32900 ; /* Blue background */
+  color: #000000 ; /* White text */
+  padding: 10px 20px; /* Padding inside the button */
+  border: 2px solid #000000 ; /* No border */ /* Rounded corners */
+  cursor: pointer; /* Change cursor to pointer on hover */
+  font-size: 16px; /* Font size */
+  transition: background-color 0.3s ease; 
+}
+
+.filtro-botao:hover {
+  outline: 2px solid  #6c1305; 
+}
+
+.filtro-botao:focus-visible {
+  outline: 2px solid  #6c1305; 
+}
+
+.filtro-botao:focus {
+  outline: none;         
+  box-shadow: 0 0 0 2px  #6c1305; 
+}
