--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,7 +5,7 @@ header {
     position:absolute;
     top: 0; /*Isso aq q gruda no topo*/
     width: 100%;
-    height: 140px;
+    height: 170px; /*muda o tamanho da header*/
     z-index: 1000;
 }
 .background-image{
