--- a/src/components/PizzaOrder.css
+++ b/src/components/PizzaOrder.css
@@ -8,6 +8,11 @@
     
 }
 
+.order{
+  position: flex;
+  height: 100vw;
+  background: linear-gradient(110deg,  #d37115  40%, #faae33 40%);
+}
 
 textarea {
   color: rgb(255, 255, 255); 
