--- a/src/pages/Carrinho.css
+++ b/src/pages/Carrinho.css
@@ -14,6 +14,20 @@
     margin: 0 auto;
 }
 
+/* deixei eles um do lado do outro */
+.botoes-carrinho {
+  display: flex;
+  gap: 1.5rem;
+  justify-content: center;
+  margin-top: 1.5rem;
+}
+
+.botoes-carrinho .btn:hover {
+  background: #efac41;
+  color: #330a04;
+  transform: scale(1.05);
+}
+
 .carrinho-total{
     -webkit-text-stroke: 1px black
 }
@@ -58,7 +72,6 @@
     color:rgb(221, 188, 165);
     border: 3px solid #330a04 ;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: rgb(249, 229, 219);
     padding: 10px;
     text-align: center;
 
@@ -114,20 +127,18 @@
 }
 
 .carrinho button {
-  margin: auto; /* empurra o botão para a direita */
-  width: 20px; /* remove largura fixa se quiser */
-  padding: 10px 20px;
-  border: 2px solid #a31b1b;
+  padding: 12px 32px;
+  border: none;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  border-style: none none solid none;
+  border-radius: 12px;
   cursor: pointer;
-  display: block;
   color: #fef4f4;
   font-size: 20px;
   font-weight: 300;
-  padding: 16px 0;
-  width: 200px;
+  background: none;
+  transition: background 0.2s, color 0.2s, transform 0.2s;
   text-align: center;
+  min-width: 180px;
 }
 .comanda h2{
     border: 3px solid #330a04 ;
