--- a/src/pages/Cardapio.css
+++ b/src/pages/Cardapio.css
@@ -110,10 +110,23 @@ body {
    background-color:  #b32900 ; /* Blue background */
   color: #000000 ; /* White text */
   padding: 10px 20px; /* Padding inside the button */
-  border: 2px solid #000000 ; /* No border */ /* Rounded corners */
+  border: 1px solid rgb(66, 26, 14); /* No border */ /* Rounded corners */
   cursor: pointer; /* Change cursor to pointer on hover */
   font-size: 16px; /* Font size */
   transition: background-color 0.3s ease; 
+}
+
+.select {
+  min-width: 300px;
+  color: white;
+  border-radius: 30px;
+  border: 2px solid rgb(85, 51, 109);
+  cursor: pointer;
+  font-weight: 700;
+  background: rgb(135, 126, 79)
+  url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5' stroke='%23FFF'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='m19.5 8.25-7.5 7.5-7.5-7.5' /%3E%3C/svg%3E")
+  right 10px center / 20px no-repeat;
+  padding-right: 30px; /* espaço pro ícone da seta */
 }
 
 .filtro-botao:hover {
