--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -49,7 +49,13 @@ header {
 }
 
 
-
+.nav-links {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    display: flex;
+    gap: 20px;
+}
 
 .button-29 {
   position: relative;
