--- a/src/pages/Carrinho.css
+++ b/src/pages/Carrinho.css
@@ -14,20 +14,6 @@
     margin: 0 auto;
 }
 
-.botao-remover{
-  text-align: center;
-  width: 20px; /* remove largura fixa se quiser */
-  padding: 10px 20px;
-  border: 2px solid #000000;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  border-style: none none solid none;
-  color: #fef4f4;
-  padding: 16px 0;
-  width: 200px;
-  font-size: 20px;
-  font-weight: 300;
-  
-}
 
 
 /* deixei eles um do lado do outro */
@@ -136,6 +122,10 @@
   
 }
 
+.carrinho-item-info button{
+  left:5%;
+  margin-right: 20px;
+}
 .carrinho-com-itens {
   max-width: 800px;
   margin: 0 auto;
@@ -149,7 +139,7 @@
   border-radius: 12px;
   cursor: pointer;
   color: #fef4f4;
-  font-size: 20px;
+  font-size: 30px;
   font-weight: 300;
   background: none;
   transition: background 0.2s, color 0.2s, transform 0.2s;
@@ -313,4 +303,16 @@ select {
   100% {
     transform:translateX(25%);
   }
+}
+
+.endereco{
+  width: 300px;
+  height: 100px;
+  font-size: 1.5rem;
+  color: #6c1305;
+  background-color: white;
+}
+
+.endereco::placeholder{
+  color:#330a04 
 }
