--- a/src/pages/Carrinho.css
+++ b/src/pages/Carrinho.css
@@ -7,7 +7,6 @@
     text-align: center;
     font-weight: Impact;
     text-transform: uppercase;
-    background-color: #efac41;
     -webkit-background-clip: text;
     color: transparent;
     -webkit-text-stroke: 1px black;
@@ -38,7 +37,7 @@
     color:rgb(123, 56, 8);
     border: 3px solid #291c0f;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: rgb(249, 230, 218);
+    color: rgb(254, 246, 241);
     padding: 10px;
     text-align: center;
 
@@ -50,7 +49,7 @@
 .olhada-produtos{
 
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: rgb(229, 209, 197);
+    color: rgb(251, 245, 240);
     padding: 10px;
     text-align: center;
 
@@ -71,7 +70,7 @@
 }
 
 .carrinho-nome{
-    color:rgb(247, 235, 227);
+    color:rgb(253, 249, 246);
     border: 3px solid #330a04 ;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     padding: 10px;
@@ -274,9 +273,9 @@ select {
 }
 
 
-.bg{
+.bg {
   animation:slide 3s ease-in-out infinite alternate;
-  background-image: linear-gradient(-60deg,  #efac41  50%, #e54312 50%);
+  background-image: linear-gradient(-60deg, #6c3 50%, #09f 50%);
   bottom:0;
   left:-50%;
   opacity:.5;
