--- a/src/components/PizzaOrder.css
+++ b/src/components/PizzaOrder.css
@@ -20,7 +20,7 @@
 .order{
   position: flex;
   height: 1050px;
-  background: linear-gradient(135deg,  rgb(182, 125, 34),rgb(176, 96, 4) 40%,rgb(120, 74, 0) 40%,rgb(231, 129, 4) 40%,rgb(198, 109, 7) 100%)
+  background: linear-gradient(135deg, rgb(245, 155, 11) 50%,rgb(237, 202, 28) 50% 100%)
 }
 
 textarea {
