--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -33,19 +33,20 @@ header {
 
 .melting-text {
     top: 0;
-    -webkit-text-stroke: 1.3px rgb(0, 0, 0);
+    -webkit-text-stroke: 1.5px rgb(0, 0, 0);
     z-index: 1000;
-    font-size: 4rem;
-    padding-left: 8rem;
+    font-size: 5rem;
+    font-family:Impact;
     padding-top: 1.5rem;
     font-weight: bold;
     text-transform: uppercase;
     color: #fff;
-    background-color: #efac41;
+    background-color: #f6a738;
     animation: melt 3s infinite ease-in-out;
     -webkit-background-clip: text;
     color: transparent;
     margin: 0;
+    letter-spacing: 1px; 
 }
 
 .nav-links {
