--- a/src/pages/Cardapio.css
+++ b/src/pages/Cardapio.css
@@ -13,7 +13,7 @@
     color: rgb(245, 234, 227);
     padding: 10px;
     text-align: center;
-    background-color: #cc3e18;
+    background-color: #92041eff;
     -webkit-text-stroke: 2px rgb(66, 26, 14);
     border-radius: 5px; /*caso nao quiser redondo tira isso aq*/
 }
@@ -24,7 +24,7 @@
     color: rgb(248, 230, 220);
     padding: 10px;
     text-align: center;
-    background-color: #f0971c;
+    background-color: #ffa221;
     -webkit-text-stroke: 1px rgb(66, 26, 14);
     border-radius: 30px; /*caso nao quiser redondo tira isso aq*/
 }
@@ -35,7 +35,7 @@
     color: rgb(248, 230, 220);
     padding: 20px;
     text-align: center;
-    background-color: #efac41;
+    background-color: #ee9f21;
     -webkit-text-stroke: 1px rgb(66, 26, 14);
     border-radius: 30px; /*caso nao quiser redondo tira isso aq*/
     letter-spacing: 1px; 
@@ -51,7 +51,6 @@
 }
 
 .cardapio {
-  padding-top: 100px; /*Aq aumenta a distancia entre header e cardapio*/
   width: 100%;
 }
 
@@ -117,13 +116,13 @@ body {
 
 .filtro{
   position: relative;
-  padding-top: 100px;
+  padding-top: 30px;
 }
 
 .filtro-botao{
    background-color:  #b32900 ; 
   color: #000000 ; 
-  padding: 10px 20px; 
+
   border: 1px solid rgb(66, 26, 14); 
   cursor: pointer; 
   font-size: 16px; 
